# pandora

./: README.md  meson.build
.cache/clangd/index/: OpenGL.cpp.A941674B5687CA35.idx  OpenGL.cpp.BE59887A2358A4FF.idx  Pandora.cpp.D46D23B7AF17B8D1.idx  Pandora.cpp.E7FF8C22C3A43B7A.idx  Pandora.hpp.B82C479A32517C00.idx  Pandora.hpp.FA93A4E74095EA4F.idx  SDL.cpp.161E6B82B924187E.idx  main.cpp.4DFB254585A1E82F.idx
src/: OpenGL.cpp  Pandora.cpp  Pandora.hpp
src/shaders/: fragmentshader.glsl  vertexshader.glsl
